--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material/button": "^7.0.0",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
+    "firebase": "^7.24.0",
     "html2canvas": "^1.0.0-rc.7",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
