--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.2",
     "firebase": "^7.24.0",
     "html2canvas": "^1.0.0-rc.7",
+    "semantic-ui-dropdown": "^2.4.1",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.9.0",
