--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "html2canvas": "^1.0.0-rc.7",
     "semantic-ui-dropdown": "^2.4.1",
     "semantic-ui-vue": "^0.11.0",
+    "semvue": "^0.6.0",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.9.0",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.4.6"
   },
   "devDependencies": {
