--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.9.0",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.4.6"
   },
   "devDependencies": {
