--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@material/button": "^7.0.0",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "cron": "^1.8.2",
     "dependencies": "0.0.1",
     "file-saver": "^2.0.2",
     "firebase": "^7.24.0",
     "html2canvas": "^1.0.0-rc.7",
+    "plotly.js-dist": "^1.57.1",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-cron": "^1.0.9",
     "vue-crontab": "0.0.4",
     "vue-material-design-icons": "^4.9.0",
